@startuml
'https://plantuml.com/class-diagram

class HalpmiException {
    +HalpmiException(String)
    +toString() : String
}
<<<<<<< HEAD
class DuplicateEntryException

class UserInputErrorException

class NotFoundException

DuplicateEntryException --|> HalpmiException
UserInputErrorException --|> HalpmiException
NotFoundException --|> HalpmiException
=======
class DuplicateEntryException {
    +DuplicateEntryException(String)
    +toString() : String
 }

class NotFoundException {
    +DuplicateEntryException(String)
    +toString() : String
}
DuplicateEntryException --|> Exception
HalpmiException --|> Exception
NotFoundException --|> Exception
>>>>>>> master
@enduml